config/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devcamp2023-hehe-deployment
  labels:
    app: devcamp2023-hehe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devcamp2023-hehe
  template:
    metadata:
      labels:
        app: devcamp2023-hehe
    spec:
      containers:
        - name: devcamp2023-hehe
          image: registry.digitalocean.com/containers/devcamp2023-hehe:<TAG>
          ports:
            - containerPort: 80
