config/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devcamp2023-hehe-service
spec:
  selector:
    app.kubernetes.io/name: proxy
  ports:
    - name: devcamp2023-hehe-port
      protocol: TCP
      port: 80
      targetPort: http-web-svc
