config/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devcamp2023-hehe-ingress
  namespace: apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: app.ostepopp.site
      http:
        paths:
          - path: "/devcamp2023-hehe(/|$)(.*)"
            pathType: Prefix
            backend:
              service:
                name: devcamp2023-hehe-service
                port:
                  number: 80
